# serializer version: 1
# name: test_entities[cover.covername-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.covername',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CoverName',
    'platform': 'velbus',
    'previous_unique_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '1234-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.covername-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 50,
      'friendly_name': 'CoverName',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.covername',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_entities[cover.covernamenopos-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.covernamenopos',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CoverNameNoPos',
    'platform': 'velbus',
    'previous_unique_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': None,
    'unique_id': '12345-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.covernamenopos-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assumed_state': True,
      'friendly_name': 'CoverNameNoPos',
      'supported_features': <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.covernamenopos',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'opening',
  })
# ---
